# lithify

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  evolution-en.md  evolution-zh.md
.claude/skills/lithify-rust/: SKILL.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  config.rs  convert.rs  lib.rs
crates/rag/: Cargo.toml
crates/rag/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
crates/skill/: Cargo.toml
crates/skill/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
dev_plan/: ROADMAP.md
docs/: AI_WORKFLOW.md  ARCHITECTURE.md  ROADMAP.md  TECH_STACK.md
docs/design-docs/core/core-traits/dev_plan/: 01-core-traits.md
docs/design-docs/llm/llm-client/: spec.md  tasks.md
docs/design-docs/llm/llm-client/dev_plan/: 01-deps-config-lib.md  02-convert.md  03-client.md
docs/design-docs/sandbox/sandbox/: spec.md
obsidian/: _CLAUDE.md  index.md  log.md
obsidian/Ideas/: Agent Harness 存储层次类比.md
obsidian/Projects/lithify/: Dev-Skills.md  Docs-Code-Protocol.md  Overview.md  Phase1-Spec.md
obsidian/Projects/lithify/modules/: 00-Data-Access-Model.md  01-Memory-Hierarchy.md  02-Peripheral-MCP.md  03-Kernel-Privilege.md  04-Process-Scheduling.md  05-Self-Evolution.md  06-IPC.md  07-Signal-System.md  08-Observability.md  09-Security-Model.md  10-Virtual-Context.md  11-Stable-ABI.md  12-Init-Sequence.md  13-Package-Manager.md
scripts/: check.sh  test_real_llm.sh
