[package]
name = "lithify-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lithify-core = { path = "../core" }
lithify-storage = { path = "../storage" }
lithify-llm = { path = "../llm" }
lithify-sandbox = { path = "../sandbox" }
lithify-skill = { path = "../skill" }
lithify-rag = { path = "../rag" }
lithify-tools = { path = "../tools" }
