[package]
name = "lithify-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lithify-core = { path = "../core" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["process", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
